career-profiles initial setup

--- a/careers/index.qmd
+++ b/careers/index.qmd
@@ -1,19 +1,18 @@
 ---
 pagetitle: Careers | Real World Data Science
 title: Careers
-subtitle: Insight, advice and guidance on how to succeed in data science
+subtitle: "Insight, advice and guidance on how to succeed in data science. In this section: [Career profiles](career-profiles/index.qmd)"
 search: false 
-# listing:
-#   contents: 
-#   - editors-blog
-#   - interviews
-#   - "!index.qmd"
-#   sort: "date desc"
-#   type: default
-#   categories: true
-#   sort-ui: false
-#   filter-ui: false
-#   page-size: 10
-#   feed: true
+listing:
+  contents: 
+  - career-profiles
+  - "!index.qmd"
+  sort: "date desc"
+  type: grid
+  categories: true
+  sort-ui: false
+  filter-ui: false
+  page-size: 30
+  feed: true
 ---
 Our careers content is in development. Interested in contributing to Real World Data Science? [Check out our call for contributions](/contributor-docs/call-for-contributions.qmd). 
