added sidebar and categories

--- a/careers/career-profiles/posts/03/28/tamanna-haque.qmd
+++ b/careers/career-profiles/posts/03/28/tamanna-haque.qmd
@@ -3,7 +3,10 @@ title: "'Data science challenges you to keep learning -- there’ll always be ne
 description: |
   Tamanna Haque, lead data scientist at Jaguar Land Rover, shares her route into data science: from pursuing a maths degree at Manchester to analysing vehicle data for a major automotive manufacturer.
 categories:
-  - 
+  - Automotive
+  - Analytics
+  - Leadership
+  - Machine learning
 author: Brian Tarran
 date: 03/28/2023
 image: images/tamanna-haque-crop.png
