--- a/careers/career-profiles/posts/03/28/tamanna-haque.qmd
+++ b/careers/career-profiles/posts/03/28/tamanna-haque.qmd
@@ -28,10 +28,10 @@ The realisation of value! Whether that is added revenue, saved costs or improved
 
 ::: {.pullquote-container}
 ::: grid
-::: {.g-col-12 .g-col-md-4}
-![Photo &copy; Tamanna Haque. Published with permission.](images/tamanna-haque.png){fig-alt="Black and white portrait photo of Tamanna Haque" width="500" fig-align="left"}
+::: {.g-col-12 .g-col-lg-4}
+![Photo supplied by Tamanna Haque, courtesy of Jaguar Land Rover.](images/tamanna-haque.png){fig-alt="Black and white portrait photo of Tamanna Haque" fig-align="left"}
 ::: 
-::: {.g-col-12 .g-col-md-8 .pullquote-grid .pullquote}
+::: {.g-col-12 .g-col-lg-8 .pullquote-grid .pullquote}
 ![](/images/pullquote-purple.png){width="50px"}
 
 There are more routes to getting into data science nowadays, but it’s important to not lose sight of fundamentals such as statistics and mathematics. A lot of people can code-up models but it’s fair to say that only a portion of them appreciate how to do this responsibly.
