--- a/ideas/tutorials/posts/03/XX-flowers/flowers.qmd
+++ b/ideas/tutorials/posts/03/XX-flowers/flowers.qmd
@@ -7,7 +7,7 @@ categories:
   - History of data science
   - Statistics
 author: Jonathan Auerbach
-date: 03/09/2023
+date: 03/28/2023
 bibliography: references.bib
 citation-location: margin
 # image:
@@ -61,14 +61,14 @@ Quetelet was not the first to study bloom dates. Anthophiles have recorded the d
 
 Quetelet was also not the first to study the relationship between temperature and bloom dates. René Réaumur [-@deréaumur_1735], an early adopter of the thermometer, noted the relationship before Marsham published his *Indications*. But Quetelet was the first to systematically study the relationship across a wide variety of plants and derive the amount of heat needed to bloom. An example of Quetelet's careful record keeping can be seen in Figure 2, one of many tables he reported in his publications.
 
-![](images/quetelet_bloom.png){width="600" fig-align="center" description="Bloom dates at Brussels Observatory observed by Quetelet between 1839 and 1852. Source: [Gallica](https://gallica.bnf.fr/ark:/12148/bpt6k95028d)"}
+![](images/quetelet_bloom.png){width="600" fig-align="left" description="Bloom dates at Brussels Observatory observed by Quetelet between 1839 and 1852. Source: [Gallica](https://gallica.bnf.fr/ark:/12148/bpt6k95028d)"}
 
 ::: {.figure-caption}
 **Figure 2:** Bloom dates at Brussels Observatory observed by Quetelet between 1839 and 1852. Source: [Gallica](https://gallica.bnf.fr/ark:/12148/bpt6k95028d).
 :::
 
 ## Reproducing Quetelet's law of the flowering plants
-To reproduce Quetelet's law, we combine the data in Figure 2 with additional observations from his *Letters*. We focus on Quetelet's primary example, the bloom date of the common lilac, *Syringa vulgaris*, row 18 of Figure 2. We do this because Quetelet carefully describes his methodology for measuring the bloom date of lilacs. For example, Quetlelet considers a lilac to have bloomed when "the first corolla opens and shows the stamina." That event is closest to what the USA Phenology Network describes as "open flowers", depicted in the center image of Figure 3 below. This detail will become relevant when we attempt to replicate Quetelet's law in a later section. Note that although we focus on lilacs in this tutorial, the `R` code is easily edited to predict the day that other plants will bloom.
+To reproduce Quetelet's law, we combine the data in Figure 2 with additional observations from his *Letters*. We focus on Quetelet's primary example, the bloom date of the common lilac, *Syringa vulgaris*, row 18 of Figure 2. We do this because Quetelet carefully describes his methodology for measuring the bloom date of lilacs. For example, Quetelet considers a lilac to have bloomed when "the first corolla opens and shows the stamina." That event is closest to what the USA Phenology Network describes as "open flowers", depicted in the center image of Figure 3 below. This detail will become relevant when we attempt to replicate Quetelet's law in a later section. Note that although we focus on lilacs in this tutorial, the `R` code is easily edited to predict the day that other plants will bloom.
 
 :::{layout-ncol=3}
 ![](images/buds250.jpg){height=250px group="flowers" description="Flower buds. Source: [USA National Phenology Network](https://www.usanpn.org/nn/TrackaLilac)"}
@@ -1640,15 +1640,7 @@ root mean squared error (days)
 
 Any weather forecast can become a flower forecast by applying the law of the flowering plants. In this section, we use the AccuWeather forecast to predict the day a hypothetical lilac will bloom in Brussels in 2023. AccuWeather forecasts daily maximum and minimum temperatures three months into the future. We do not evaluate the quality of these forecasts. The purpose of this section is to simply convert them into flower forecasts.
 
-We use the AccuWeather forecast as it appeared on the webpage [AccuWeather.com](https://www.accuweather.com/en/be/brussels/27581/january-weather/27581?year=2023) on February 19, 2023. AccuWeather reports the forecast for each month on a separate webpage. For example, Figure 6 shows the webpage containing the forecast for March 2023. For reproducibility, we saved each page on the [Internet Archive](https://web.archive.org/web/20230219151906/https://www.accuweather.com/en/be/brussels/27581/january-weather/27581?year=2023&unit=c). The following `R` code creates the function `get_weather_table` to retrieve each page we saved, extract the forecast contained within that page, and arrange the data as a tibble. The `get_weather_table` function combines several functions from the `rvest` package, which is yet another member of the "tidyverse". In particular, the forecast on each page is contained within the div "monthly-calendar" and can be extracted with the `html_nodes` and `html_text2` functions.
-
-```{=html}
-<iframe width=100% height="500" src="https://web.archive.org/web/20230219152153/https://www.accuweather.com/en/be/brussels/27581/march-weather/27581?year=2023&unit=c"></iframe>
-```
-
-:::{.figure-caption}
-**Figure 6:** Forecast for Brussels, March 2023, as it appeared on AccuWeather.com on February 19, 2023. Source: [AccuWeather](https://www.accuweather.com/en/be/brussels/27581/march-weather/27581?year=2023&unit=c), [Internet Archive](https://web.archive.org/web/20230219152153/https://www.accuweather.com/en/be/brussels/27581/march-weather/27581?year=2023&unit=c)
-:::
+We use the AccuWeather forecast as it appeared on the webpage [AccuWeather.com](https://www.accuweather.com/en/be/brussels/27581/january-weather/27581?year=2023) on February 19, 2023. AccuWeather reports the forecast for each month on a separate webpage. For reproducibility, we saved each page on the [Internet Archive](https://web.archive.org/web/20230219151906/https://www.accuweather.com/en/be/brussels/27581/january-weather/27581?year=2023&unit=c). The following `R` code creates the function `get_weather_table` to retrieve each page we saved, extract the forecast contained within that page, and arrange the data as a tibble. The `get_weather_table` function combines several functions from the `rvest` package, which is yet another member of the "tidyverse". In particular, the forecast on each page is contained within the div "monthly-calendar" and can be extracted with the `html_nodes` and `html_text2` functions.
 
 Applying the `get_weather_table` function to the url for each page yields a five column tibble `temp_br`, with columns defined in the same way as the tibble `temp`, discussed in previous sections. The first 10 rows are below; the data are also available on the author's [GitHub](https://raw.githubusercontent.com/jauerbach/miscellaneous/main/temp_br.csv).
 
@@ -1962,7 +1954,7 @@ bloom date
 
 :::
 
-We visualize the predictions in Figure 7, which has the same interpretation as Figure 4. If the temperature forecast and Quetelet's law are correct, on January 27, 2023 the lilacs in Brussels began "collecting" temperature. The lilacs will continue to "collect" temperature until April 19, at which point they will exceed their 4264°C² quota and bloom.
+We visualize the predictions in Figure 6, which has the same interpretation as Figure 4. If the temperature forecast and Quetelet's law are correct, on January 27, 2023 the lilacs in Brussels began "collecting" temperature. The lilacs will continue to "collect" temperature until April 19, at which point they will exceed their 4264°C² quota and bloom.
 
 ```{{r}}
 (temp_br %>% 
@@ -1973,7 +1965,7 @@ We visualize the predictions in Figure 7, which has the same interpretation as F
     x = "",
     y = "midrange temperature (°C)",
     title =
-      "Figure 7: According to Quetelet's law, the lilacs will bloom once exposed to 4264°C² following the last frost.") +
+      "Figure 6: According to Quetelet's law, the lilacs will bloom once exposed to 4264°C² following the last frost.") +
   geom_vline(xintercept = as.numeric(c(frost_day_br, bloom_day_br)), 
              linetype = "dotted")) %>%
   ggplotly() %>% 
@@ -1986,10 +1978,10 @@ We visualize the predictions in Figure 7, which has the same interpretation as F
   config(displaylogo = FALSE)
 ```
 
-![](images/fig7.png){description="**Figure 7:** According to Quetelet's law, the lilacs will bloom once exposed to 4264°C² following the last frost."}
+![](images/fig6.png){description="**Figure 6:** According to Quetelet's law, the lilacs will bloom once exposed to 4264°C² following the last frost."}
 
 :::{.figure-caption}
-**Figure 7:** According to Quetelet's law, the lilacs will bloom once exposed to 4264°C² following the last frost.
+**Figure 6:** According to Quetelet's law, the lilacs will bloom once exposed to 4264°C² following the last frost.
 :::
 
 ## Quetelet's legacy: advocate, mentor, and perhaps data scientist
@@ -1998,14 +1990,14 @@ In this tutorial, we stated the law of the flowering plants and explained how Qu
 
 The law of the flowering plants surely stands the test of time. It continues to be used by scientists -- with relatively few changes -- to plan harvests, manage pests, and study ecosystems stressed by climate change. We speculate the law's longevity is due to the fact that it balances simplicity with relatively accurate predictions.
 
-Although Quetelet did not discover the law, he did much to advance it. Queletet founded an international network for "observations of the periodical phenomena" (in addition to numerous statistical societies and publications, including the precursor to the Royal Statistical Society). Quetelet’s network of eighty stations collected observations throughout Europe from 1841 until 1872. In particular, Quetelet collaborated with Charles Morren -- who later coined the term phenology, the name of the field that now studies biological life-cycle events like the timing of flower blooms [@demarée_rutishauser_2011].
+Although Quetelet did not discover the law, he did much to advance it. Quetelet founded an international network for "observations of the periodical phenomena" (in addition to numerous statistical societies and publications, including the precursor to the Royal Statistical Society). Quetelet’s network of eighty stations collected observations throughout Europe from 1841 until 1872. In particular, Quetelet collaborated with Charles Morren -- who later coined the term phenology, the name of the field that now studies biological life-cycle events like the timing of flower blooms [@demarée_rutishauser_2011].
 
-In recent years, the observations collected through phenology networks have become an important resource for understanding the impacts of climate change. For example, the USA National Phenology Network calculates the Spring Bloom Index, which measures the "first day of spring" using the days lilacs are observed to bloom at locations across the United States. The index is then compared to previous years. Figure 8 shows one comparison, called the Return Interval. The Return Interval is much like a p-value, calculating how frequently more extreme spring indices were observed in previous decades. Bloom dates that are uncommonly early (green) or late (purple) may indicate environments stressed by changing climate. Scientists exploit the relationship between temperature and bloom date to extrapolate the index to areas with few observations.
+In recent years, the observations collected through phenology networks have become an important resource for understanding the impacts of climate change. For example, the USA National Phenology Network calculates the Spring Bloom Index, which measures the "first day of spring" using the days lilacs are observed to bloom at locations across the United States. The index is then compared to previous years. Figure 7 shows one comparison, called the Return Interval. The Return Interval is much like a p-value, calculating how frequently more extreme spring indices were observed in previous decades. Bloom dates that are uncommonly early (green) or late (purple) may indicate environments stressed by changing climate. Scientists exploit the relationship between temperature and bloom date to extrapolate the index to areas with few observations.
 
-![](images/six-bloom-return-interval-2020.png){description="**Figure 8:** The Spring Bloom Index Return Interval measures whether spring is typical when compared to recent decades. Source: [USA National Phenology Network](https://www.usanpn.org/files/npn/maps/six-bloom-return-interval-2020.png)"}
+![](images/six-bloom-return-interval-2020.png){description="**Figure 7:** The Spring Bloom Index Return Interval measures whether spring is typical when compared to recent decades. Source: [USA National Phenology Network](https://www.usanpn.org/files/npn/maps/six-bloom-return-interval-2020.png)"}
 
 :::{.figure-caption}
-**Figure 8:** The Spring Bloom Index Return Interval measures whether spring is typical when compared to recent decades. Source: [USA National Phenology Network](https://www.usanpn.org/files/npn/maps/six-bloom-return-interval-2020.png)
+**Figure 7:** The Spring Bloom Index Return Interval measures whether spring is typical when compared to recent decades. Source: [USA National Phenology Network](https://www.usanpn.org/files/npn/maps/six-bloom-return-interval-2020.png)
 :::
 
 Quetelet's emphasis on discovering the universal laws he believed govern social and biological phenomenon has not endured. But data scientists continue to appropriate laws from one area of science to study another. For example, data scientists use neural networks and genetic algorithms to study a wide variety of phenomenon unrelated to neuroscience or genetics. Perhaps Quetelet's appropriation of Newton's law, in addition to his careful use of data, make him among the first data scientists.
@@ -2095,7 +2087,7 @@ Copyright and licence
 
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-: Auerbach, Jonathan. 2023. "A demonstration of the law of the flowering plants." Real World Data Science, March 9, 2023. [URL](https://realworlddatascience.net/ideas/tutorials/posts/03/XX-flowers/flowers.html)
+: Auerbach, Jonathan. 2023. "A demonstration of the law of the flowering plants." Real World Data Science, March XX, 2023. [URL](https://realworlddatascience.net/ideas/tutorials/posts/03/XX-flowers/flowers.html)
 :::
 :::
 :::
