--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!AI-screening.qmd"
+    - "!tamanna-haque.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -111,15 +111,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/viewpoints/editors-blog/posts/2023/03/15/AI-screening.qmd">
+<a href="/careers/career-profiles/posts/03/28/tamanna-haque.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## OpenAI’s text classifier won’t calm fears about AI-written homework
-Educators are worried about ChatGPT being used by students for homework assignments, so OpenAI has released a tool to classify whether text is human- or AI-written. But relying on the classifier’s results is ill-advised, as some basic statistics shows.
+## 'Data science challenges you to keep learning -- there’ll always be new advances in the field'
+Tamanna Haque, lead data scientist at Jaguar Land Rover, shares her route into data science: from pursuing a maths degree at Manchester to analysing vehicle data for a major automotive manufacturer.
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](viewpoints/editors-blog/posts/2023/03/15/images/teacher-marking-homework.png)
+![](careers/career-profiles/posts/03/28/images/tamanna-haque-crop.png)
 :::
 :::
 
@@ -158,11 +158,11 @@ Welcome to the home of **Real World Data Science**, a new project from the [Roya
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## It is arbitrary how we choose to model a situation. There are infinitely many different ways that you could choose to simplify reality -- this huge, messy, complex thing in front of us.
-Erica Thompson on the ethics of modelling
+## We are seeing communities who don't necessarily have the technical background to judge the capabilities of these models, but see the opportunities for their own domain and might be acting too fast in adopting them. The producer of these models has a certain responsibility to make sure that this doesn't happen.
+Detlef Nauck on the risks of large language models
 
 ::: {.button .button1}
-[Watch the interview](viewpoints/interviews/posts/01/25/erica-thompson.qmd)
+[Watch the interview](viewpoints/editors-blog/posts/2023/01/27/talking-chatgpt.qmd)
 :::
 
 :::
@@ -200,11 +200,11 @@ Erica Thompson on the ethics of modelling
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## Data tell our stories, and they reflect what’s happening in our world today. A way to think about data science education is to think about what we need our data understanding to be at each point in time in our educational career, or in our lives.
-Anna Bargagliotti on the US Data Science and Literacy Act
+## It is arbitrary how we choose to model a situation. There are infinitely many different ways that you could choose to simplify reality -- this huge, messy, complex thing in front of us.
+Erica Thompson on the ethics of modelling
 
 ::: {.button .button1}
-[Watch the interview](viewpoints/interviews/posts/03/06/data-science-act.qmd)
+[Watch the interview](viewpoints/interviews/posts/01/25/erica-thompson.qmd)
 :::
 
 :::
