update image caption

--- a/careers/career-profiles/posts/03/28/tamanna-haque.qmd
+++ b/careers/career-profiles/posts/03/28/tamanna-haque.qmd
@@ -29,7 +29,7 @@ The realisation of value! Whether that is added revenue, saved costs or improved
 ::: {.pullquote-container}
 ::: grid
 ::: {.g-col-12 .g-col-lg-4}
-![Photo supplied by Tamanna Haque, courtesy of Jaguar Land Rover.](images/tamanna-haque.png){fig-alt="Black and white portrait photo of Tamanna Haque" fig-align="left"}
+![Photo supplied by Tamanna Haque, courtesy of Jaguar Land Rover. Used with permission.](images/tamanna-haque.png){fig-alt="Black and white portrait photo of Tamanna Haque" fig-align="left"}
 ::: 
 ::: {.g-col-12 .g-col-lg-8 .pullquote-grid .pullquote}
 ![](/images/pullquote-purple.png){width="50px"}
