Categories added/updated

--- a/viewpoints/editors-blog/posts/2022/12/01/themes.qmd
+++ b/viewpoints/editors-blog/posts/2022/12/01/themes.qmd
@@ -4,7 +4,7 @@ description: |
   Can data science save the world? What is a data scientist? What statistical ideas do data scientists need to know? And, what's happening in the world of data science? 
 categories:
   - Updates
-  - Key themes
+  - Themes
   - Content ideas
 author: Brian Tarran
 date: 12/01/2022
