--- a/viewpoints/editors-blog/posts/2023/03/29/defining-DS.qmd
+++ b/viewpoints/editors-blog/posts/2023/03/29/defining-DS.qmd
@@ -3,10 +3,12 @@ title: Data science as 'a rainbow', and other definitions
 description: |
   Data science means different things to different people. Former RSS president Sylvia Richardson has described it as 'a rainbow of interconnected disciplines'. But what's your personal definition?     
 categories:
-
+  - Updates
+  - Themes
+  - People
 author: Brian Tarran
 date: 03/29/2023
-toc: true
+toc: false
 image: images/rainbow.png
 image-alt: An illustration of a colorful rainbow, with each band of the rainbow featuring a selection of numbers to represent data. Image created by Bing Image Creator.
 ---
