--- a/viewpoints/editors-blog/posts/2023/03/29/defining-DS.qmd
+++ b/viewpoints/editors-blog/posts/2023/03/29/defining-DS.qmd
@@ -1,7 +1,7 @@
 ---
 title: Data science as 'a rainbow', and other definitions
 description: |
-  Data science means different things to different people. Former RSS president Sylvia Richardson has described it as 'a rainbow of interconnected disciplines'. But what's your personal definition?     
+  Data science means different things to different people. Former RSS president Sylvia Richardson has described it as 'a rainbow of interconnected disciplines'. What's your personal definition?     
 categories:
   - Updates
   - Themes
