--- a/ideas/tutorials/posts/03/XX-flowers/references.bib
+++ b/ideas/tutorials/posts/03/XX-flowers/references.bib
@@ -54,7 +54,8 @@
   title = {Annales De L'Observatoire Royal De Bruxelles},
   year = {1848},
   publisher = {M. Hayez},
-  address = {Bruxelles}
+  address = {Bruxelles},
+  url = {https://catalog.hathitrust.org/Record/000553895}
 }
 
 @book{quetelet_1857,
@@ -62,7 +63,8 @@
   author={Quetelet, Adolphe},
   publisher={M. Hayez},
   address={Bruxelles},
-  year={1857}
+  year={1857},
+  url = {https://catalog.hathitrust.org/Record/000553895}
 }
 
 @book{quetelet1846lettres,
@@ -70,7 +72,8 @@
   title = {Lettres à S.A.R. Le Duc Régnant De Saxe-Coburg Et Gotha: Sur La Théorie Des Probabilités, Appliquée Aux Sciences Morales Et Politiques},
   year = {1846},
   publisher = {M. Hayez},
-  address = {Bruxelles}
+  address = {Bruxelles},
+  url = {https://catalog.hathitrust.org/Record/001387625}
 }
 
 @book{quetelet_1849,
@@ -78,7 +81,8 @@
   author={Quetelet, Adolphe},
   publisher={C. & E. Layton},
   address={London},
-  year={1849}
+  year={1849},
+  url={https://catalog.hathitrust.org/Record/008956987}
 }
 
 @article{rosemartin_denny_weltzin_lee_marsh_wilson_mehdipoor_zurita-milla_schwartz_2015,
@@ -120,4 +124,12 @@
   author={Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani}, 
   title={Welcome to the Tidyverse}, 
   journal={Journal of Open Source Software}
+}
+
+@book{grolemund2017r,
+  title={R for Data Science},
+  author={Grolemund, Garrett and Wickham, Hadley},
+  year={2017},
+  publisher={O'Reilly Media},
+  address={Sebastopol, CA}
 }
