added homepage image

--- a/ideas/tutorials/posts/04/13/flowers.qmd
+++ b/ideas/tutorials/posts/04/13/flowers.qmd
@@ -10,8 +10,8 @@ author: Jonathan Auerbach
 date: 04/13/2023
 bibliography: references.bib
 citation-location: margin
-# image:
-# image-alt: 
+image: images/quetelet-flowers.png
+image-alt: Portrait of Adolphe Quetelet, superimposed on a photo of blooming purple lilacs.
 toc: true
 filters:
   - lightbox
