--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!tamanna-haque.qmd"
+    - "!defining-DS.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -115,11 +115,11 @@ toc: false
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## 'Data science challenges you to keep learning -- there’ll always be new advances in the field'
-Tamanna Haque, lead data scientist at Jaguar Land Rover, shares her route into data science: from pursuing a maths degree at Manchester to analysing vehicle data for a major automotive manufacturer.
+## Data science as ‘a rainbow’, and other definitions
+Data science means different things to different people. Former RSS president Sylvia Richardson has described it as ‘a rainbow of interconnected disciplines’. What’s your personal definition?
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](careers/career-profiles/posts/03/28/images/tamanna-haque-crop.png)
+![](viewpoints/editors-blog/posts/2023/03/29/images/rainbow.png)
 :::
 :::
 
