--- a/index.qmd
+++ b/index.qmd
@@ -111,7 +111,7 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/viewpoints/editors-blog/posts/2023/03/29/defining-DS.html.qmd">
+<a href="/viewpoints/editors-blog/posts/2023/03/29/defining-DS.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
