--- a/careers/career-profiles/posts/2023/03/28/tamanna-haque.qmd
+++ b/careers/career-profiles/posts/2023/03/28/tamanna-haque.qmd
@@ -12,6 +12,8 @@ date: 03/28/2023
 image: images/tamanna-haque-crop.png
 image-alt: Black and white portrait photo of Tamanna Haque.
 toc: false
+aliases: 
+  - /careers/career-profiles/posts/03/28/tamanna-haque.html
 ---
 **Hi, Tamanna. Thank you for sharing your career story with Real World Data Science. Please tell us a little about yourself and your role in data science.**   
 I'm Tamanna Haque. I’ve been working at Jaguar Land Rover for nearly four years, recently promoted to lead data scientist working within product engineering. It’s coming up to eight years that I’ve been working in the field, and my areas of interest are the use of machine learning to provide the best products and experiences for my customers and stakeholders.  
