final section setup

--- a/ideas/index.qmd
+++ b/ideas/index.qmd
@@ -1,7 +1,7 @@
 ---
 pagetitle: Ideas | Real World Data Science
 title: Ideas
-subtitle: "The concepts, tools and methods that make data science possible. In this section: [DataScienceBites](datasciencebites/index.qmd)"
+subtitle: "The concepts, tools and methods that make data science possible. In this section: [Tutorials](tutorials/index.qmd) | [DataScienceBites](datasciencebites/index.qmd)"
 search: false
 listing:
   contents: 
