--- a/ideas/tutorials/posts/2023/04/13/flowers.qmd
+++ b/ideas/tutorials/posts/2023/04/13/flowers.qmd
@@ -2102,6 +2102,10 @@ usa_npn <-
   ungroup()
 ```
 
+::: {.article-btn}
+[Explore more Tutorials](/ideas/tutorials/index.qmd)
+:::
+
 ::: {.further-info}
 ::: grid
 ::: {.g-col-12 .g-col-md-12}
