--- a/ideas/tutorials/index.qmd
+++ b/ideas/tutorials/index.qmd
@@ -1,7 +1,7 @@
 ---
 pagetitle: Tutorials | Ideas | Real World Data Science
 title: Tutorials
-subtitle: Coming soon
+subtitle: Hands-on explorations of data science concepts, tools and methods
 search: false
 listing:
   contents: posts
