button text updated

--- a/viewpoints/interviews/posts/01/25/erica-thompson.qmd
+++ b/viewpoints/interviews/posts/01/25/erica-thompson.qmd
@@ -143,7 +143,7 @@ Excellent, excellent. Well, I wish you the best of luck with the book. As I say,
 Thank you very much. Thanks for having me.
 
 ::: {.article-btn}
-[Back to Interviews](/viewpoints/interviews/index.qmd)
+[Find more Interviews](/viewpoints/interviews/index.qmd)
 :::
 
 ::: {.further-info}
