--- a/viewpoints/interviews/posts/02/03/heidi-seibold.qmd
+++ b/viewpoints/interviews/posts/02/03/heidi-seibold.qmd
@@ -135,7 +135,7 @@ Yeah, thank you so much for having me. It was wonderful. And I always like talki
 Excellent. Excellent. Well, thank you again. And thank you to those of you who are tuning in today. Make sure to check realworlddatascience.net for more interviews. Take care.
 
 ::: {.article-btn}
-[Back to Interviews](/viewpoints/interviews/index.qmd)
+[Find more Interviews](/viewpoints/interviews/index.qmd)
 :::
 
 ::: {.further-info}
