--- a/viewpoints/interviews/posts/03/06/data-science-act.qmd
+++ b/viewpoints/interviews/posts/03/06/data-science-act.qmd
@@ -195,7 +195,7 @@ I can close this with something more philosophical, maybe. To me, I think a nice
 Very good point. Thank you very much, Anna, Steve, Zarek, and Chris, for joining us to talk about the Data Science and Literacy Act. I'm sure there'll be much more to to follow and update on as this act or bill winds its way through through Congress. So we'll look forward to hearing more about that in due course. So thank you for joining us today. Thank you to those of you who are watching for joining us. Stay tuned at realworlddatascience.net for more news Q&As.
 
 ::: {.article-btn}
-[Back to Interviews](/viewpoints/interviews/index.qmd)
+[Find more Interviews](/viewpoints/interviews/index.qmd)
 :::
 
 ::: {.further-info}
