--- a/careers/career-profiles/posts/2023/03/28/tamanna-haque.qmd
+++ b/careers/career-profiles/posts/2023/03/28/tamanna-haque.qmd
@@ -91,7 +91,7 @@ I still expect to see a skills gap in the field. There are more routes to gettin
 I also think there’s a challenge of questionable data science products reaching high levels of popularity and usage amongst the public... Some recent developments in this space have been extremely intelligent but raise ethical concerns. Just because something can be done with AI doesn’t mean it should, and my preferences are towards AI being ethical and (ideally) explainable.
 
 ::: {.article-btn}
-[Read more Career profiles](/careers/career-profiles/index.qmd)
+[Discover more Career profiles](/careers/career-profiles/index.qmd)
 :::
 
 ::: {.further-info}
