--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!defining-DS.qmd"
+    - "!flowers.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -111,15 +111,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/viewpoints/editors-blog/posts/2023/03/29/defining-DS.qmd">
+<a href="/ideas/tutorials/posts/2023/04/13/flowers.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## Data science as ‘a rainbow’, and other definitions
-Data science means different things to different people. Former RSS president Sylvia Richardson has described it as ‘a rainbow of interconnected disciplines’. What’s your personal definition?
+## A demonstration of the law of the flowering plants
+The day a flower blooms is one of the earliest phenomena studied with systematic data collection and analysis. In this tutorial, Jonathan Auerbach introduces the “law of the flowering plants” and demonstrates how it can be applied to modern datasets.
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](viewpoints/editors-blog/posts/2023/03/29/images/rainbow.png)
+![](ideas/tutorials/posts/2023/04/13/images/quetelet-flowers.png)
 :::
 :::
 
@@ -184,12 +184,12 @@ Detlef Nauck on the risks of large language models
 
 ::: {.content-container}
 ::: {.listing-block}
-<a href="viewpoints/editors-blog/index.qmd">
+<a href="viewpoints/interviews/index.qmd">
 
-## Editors' Blog
+## Interviews
 </a> 
 
-::: {#editors-blog}
+::: {#interviews}
 :::
 
 :::
@@ -213,12 +213,12 @@ Erica Thompson on the ethics of modelling
 
 ::: {.content-container}
 ::: {.listing-block}
-<a href="viewpoints/interviews/index.qmd">
+<a href="viewpoints/editors-blog/index.qmd">
 
-## Interviews
+## Editors' Blog
 </a> 
 
-::: {#interviews}
+::: {#editors-blog}
 :::
 
 :::
